# task-printer

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  install_service.sh  mcp_server.py  pyproject.toml  requirements.txt  start.sh
docs/: AUTHENTICATION.md  CUTOFF_IMPROVEMENTS.md  DEPLOYMENT.md  IMPLEMENTED.md  IMPROVEMENTS.md  MCP_IMPLEMENTATION.md  PERSISTENCE.md  TEAR_OFF_MODE.md  THEMING.md
examples/: mcp_client_demo.py
scripts/: generate_token.py  setup_fedora.sh  test_margin_improvements.py  validate_templates.py
static/js/: app.js
static/styles/: app.css
task_printer/: __init__.py
task_printer/core/: __init__.py  assets.py  config.py  db.py  logging.py
task_printer/mcp/: __init__.py  auth.py  prompts.py  resources.py  server.py  tools.py
task_printer/printing/: __init__.py  emoji.py  metadata.py  render.py  worker.py
task_printer/web/: __init__.py  api.py  api_templates.py  health.py  jobs.py  routes.py  schemas.py  setup.py  templates.py
templates/: _components.html  _form_macros.html  base.html  help.html  index.html  jobs.html  jobs_view.html  loading.html  setup.html  template_edit.html  templates.html
tests/: conftest.py  test_api_jobs.py  test_api_schemas.py  test_api_templates_api.py  test_api_templates_print.py  test_emoji_render.py  test_enhanced_schemas.py  test_final_validation.py  test_font_optimization.py  test_mcp_simple.py  test_mcp_tools_fixed.py  test_render_compose.py  test_tear_off_mode.py  test_templates_persistence.py
